[tool.poetry]
name = "cs231n"
package-mode = false
version = "0.1.0"
description = "My codes for cs231n"
authors = ["Ryota Murai"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
pickleshare = "^0.7.5"
tqdm = "^4.66.3"
h5py = "^3.11.0"
tabulate = "^0.9.0"
scipy = "^1.13.0"
imageio = "^2.34.1"
future = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
ipykernel = "^6.29.4"
pre-commit = "^3.7.0"
nbdev = "^2.3.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
